--- a/CSS project/cupcakes.css
+++ b/CSS project/cupcakes.css
@@ -14,6 +14,12 @@
 /* Put body attributes here */
 
 body { 
-	background-color: blue; color: gray;
-
+	background-color: pink; color: gray;
+font-family: "Times New Roman", Times,serif; 
 }
+h1 {
+	font-size: 200%;
+	text-align: center;
+	text-decoration: underline
+	}
+img {float: right;}
